gram/src/cs/gram/gen/M6/TFGBasicosParser.js
// Generated from /Users/joserg/TFG/gram/cs/gram/gen/M6/TFGBasicos.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var TFGBasicosVisitor = require('./TFGBasicosVisitor').TFGBasicosVisitor;

var grammarFileName = "TFGBasicos.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'gracias'", "'genial'", "'perfecto'", "'bien'", 
                     "'mal'", null, "'me'", null, "'seleccion'", "'ahora'", 
                     "'si'", "'ole'", "'acabo'", "'de'", "'verla'", "'la'", 
                     "'guardo'", "'para'", "'mas'", "'tarde'", null, null, 
                     null, "'era'", null, "'adios'", "'vere'", "'pero'", 
                     "'no'", "'convences'", "'nada'", "'muy'", "'negativo'", 
                     "'bye'", "'hasta'", "'luego'", "'voy'", "'ma\u00F1ana'", 
                     "'a'", "'trabajar'", "'un'", "'rato'", "'pronto'", 
                     "'chao'", "'es'", "'todo'", "'serie'", null, "'por'", 
                     "'hoy'", "'noches'", "'saludos'", null, "'tardes'", 
                     null, "'ya'", "'has'", "'otra'", "'vuelto'", "'que'", 
                     "'hayas'", "'estoy'", "'nuevo'", "'vez'", "'empezar'", 
                     null, "'prueba'", "'una'", null, "'aqui'" ];

var symbolicNames = [ null, "GRACIAS", "GENIAL", "PERFECTO", "BIEN", "MAL", 
                      "BUENA", "ME", "GUSTA", "SELECCION", "AHORA", "SI", 
                      "OLE", "ACABO", "DE", "VERLA", "LA", "GUARDO", "PARA", 
                      "MAS", "TARDE", "RECOMENDACION", "ESTA", "ESA", "ERA", 
                      "PARECE", "ADIOS", "VERE", "PERO", "NO", "CONVENCES", 
                      "NADA", "MUY", "NEGATIVO", "BYE", "HASTA", "LUEGO", 
                      "VOY", "MANANA", "A", "TRABAJAR", "UN", "RATO", "PRONTO", 
                      "CHAO", "ES", "TODO", "SERIE", "PELICULA", "POR", 
                      "HOY", "NOCHES", "SALUDOS", "HOLA", "TARDES", "BOT", 
                      "YA", "HAS", "OTRA", "VUELTO", "QUE", "HAYAS", "ESTOY", 
                      "NUEVO", "VEZ", "EMPEZAR", "DIAS", "PRUEBA", "UNA", 
                      "TAL", "AQUI", "WS", "PUNT" ];

var ruleNames =  [ "intents", "intent", "feedback", "positivo", "negativo", 
                   "bye", "greeting" ];

function TFGBasicosParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

TFGBasicosParser.prototype = Object.create(antlr4.Parser.prototype);
TFGBasicosParser.prototype.constructor = TFGBasicosParser;

Object.defineProperty(TFGBasicosParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

TFGBasicosParser.EOF = antlr4.Token.EOF;
TFGBasicosParser.GRACIAS = 1;
TFGBasicosParser.GENIAL = 2;
TFGBasicosParser.PERFECTO = 3;
TFGBasicosParser.BIEN = 4;
TFGBasicosParser.MAL = 5;
TFGBasicosParser.BUENA = 6;
TFGBasicosParser.ME = 7;
TFGBasicosParser.GUSTA = 8;
TFGBasicosParser.SELECCION = 9;
TFGBasicosParser.AHORA = 10;
TFGBasicosParser.SI = 11;
TFGBasicosParser.OLE = 12;
TFGBasicosParser.ACABO = 13;
TFGBasicosParser.DE = 14;
TFGBasicosParser.VERLA = 15;
TFGBasicosParser.LA = 16;
TFGBasicosParser.GUARDO = 17;
TFGBasicosParser.PARA = 18;
TFGBasicosParser.MAS = 19;
TFGBasicosParser.TARDE = 20;
TFGBasicosParser.RECOMENDACION = 21;
TFGBasicosParser.ESTA = 22;
TFGBasicosParser.ESA = 23;
TFGBasicosParser.ERA = 24;
TFGBasicosParser.PARECE = 25;
TFGBasicosParser.ADIOS = 26;
TFGBasicosParser.VERE = 27;
TFGBasicosParser.PERO = 28;
TFGBasicosParser.NO = 29;
TFGBasicosParser.CONVENCES = 30;
TFGBasicosParser.NADA = 31;
TFGBasicosParser.MUY = 32;
TFGBasicosParser.NEGATIVO = 33;
TFGBasicosParser.BYE = 34;
TFGBasicosParser.HASTA = 35;
TFGBasicosParser.LUEGO = 36;
TFGBasicosParser.VOY = 37;
TFGBasicosParser.MANANA = 38;
TFGBasicosParser.A = 39;
TFGBasicosParser.TRABAJAR = 40;
TFGBasicosParser.UN = 41;
TFGBasicosParser.RATO = 42;
TFGBasicosParser.PRONTO = 43;
TFGBasicosParser.CHAO = 44;
TFGBasicosParser.ES = 45;
TFGBasicosParser.TODO = 46;
TFGBasicosParser.SERIE = 47;
TFGBasicosParser.PELICULA = 48;
TFGBasicosParser.POR = 49;
TFGBasicosParser.HOY = 50;
TFGBasicosParser.NOCHES = 51;
TFGBasicosParser.SALUDOS = 52;
TFGBasicosParser.HOLA = 53;
TFGBasicosParser.TARDES = 54;
TFGBasicosParser.BOT = 55;
TFGBasicosParser.YA = 56;
TFGBasicosParser.HAS = 57;
TFGBasicosParser.OTRA = 58;
TFGBasicosParser.VUELTO = 59;
TFGBasicosParser.QUE = 60;
TFGBasicosParser.HAYAS = 61;
TFGBasicosParser.ESTOY = 62;
TFGBasicosParser.NUEVO = 63;
TFGBasicosParser.VEZ = 64;
TFGBasicosParser.EMPEZAR = 65;
TFGBasicosParser.DIAS = 66;
TFGBasicosParser.PRUEBA = 67;
TFGBasicosParser.UNA = 68;
TFGBasicosParser.TAL = 69;
TFGBasicosParser.AQUI = 70;
TFGBasicosParser.WS = 71;
TFGBasicosParser.PUNT = 72;

TFGBasicosParser.RULE_intents = 0;
TFGBasicosParser.RULE_intent = 1;
TFGBasicosParser.RULE_feedback = 2;
TFGBasicosParser.RULE_positivo = 3;
TFGBasicosParser.RULE_negativo = 4;
TFGBasicosParser.RULE_bye = 5;
TFGBasicosParser.RULE_greeting = 6;

function IntentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGBasicosParser.RULE_intents;
    return this;
}

IntentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntentsContext.prototype.constructor = IntentsContext;

IntentsContext.prototype.intent = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IntentContext);
    } else {
        return this.getTypedRuleContext(IntentContext,i);
    }
};

IntentsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TFGBasicosVisitor ) {
        return visitor.visitIntents(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TFGBasicosParser.IntentsContext = IntentsContext;

TFGBasicosParser.prototype.intents = function() {

    var localctx = new IntentsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, TFGBasicosParser.RULE_intents);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 15; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 14;
            this.intent();
            this.state = 17; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TFGBasicosParser.GRACIAS) | (1 << TFGBasicosParser.GENIAL) | (1 << TFGBasicosParser.PERFECTO) | (1 << TFGBasicosParser.BIEN) | (1 << TFGBasicosParser.BUENA) | (1 << TFGBasicosParser.ME) | (1 << TFGBasicosParser.AHORA) | (1 << TFGBasicosParser.OLE) | (1 << TFGBasicosParser.ACABO) | (1 << TFGBasicosParser.ESTA) | (1 << TFGBasicosParser.ESA) | (1 << TFGBasicosParser.ADIOS) | (1 << TFGBasicosParser.VERE) | (1 << TFGBasicosParser.NO) | (1 << TFGBasicosParser.NADA))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (TFGBasicosParser.MUY - 32)) | (1 << (TFGBasicosParser.NEGATIVO - 32)) | (1 << (TFGBasicosParser.HASTA - 32)) | (1 << (TFGBasicosParser.CHAO - 32)) | (1 << (TFGBasicosParser.ES - 32)) | (1 << (TFGBasicosParser.SALUDOS - 32)) | (1 << (TFGBasicosParser.HOLA - 32)) | (1 << (TFGBasicosParser.YA - 32)))) !== 0) || _la===TFGBasicosParser.EMPEZAR);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IntentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGBasicosParser.RULE_intent;
    return this;
}

IntentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntentContext.prototype.constructor = IntentContext;

IntentContext.prototype.feedback = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FeedbackContext);
    } else {
        return this.getTypedRuleContext(FeedbackContext,i);
    }
};

IntentContext.prototype.bye = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ByeContext);
    } else {
        return this.getTypedRuleContext(ByeContext,i);
    }
};

IntentContext.prototype.greeting = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(GreetingContext);
    } else {
        return this.getTypedRuleContext(GreetingContext,i);
    }
};

IntentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TFGBasicosVisitor ) {
        return visitor.visitIntent(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TFGBasicosParser.IntentContext = IntentContext;

TFGBasicosParser.prototype.intent = function() {

    var localctx = new IntentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, TFGBasicosParser.RULE_intent);
    try {
        this.state = 34;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 20; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 19;
            		this.feedback();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 22; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 25; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 24;
            		this.bye();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 27; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,2, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 30; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 29;
            		this.greeting();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 32; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FeedbackContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGBasicosParser.RULE_feedback;
    return this;
}

FeedbackContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FeedbackContext.prototype.constructor = FeedbackContext;

FeedbackContext.prototype.positivo = function() {
    return this.getTypedRuleContext(PositivoContext,0);
};

FeedbackContext.prototype.negativo = function() {
    return this.getTypedRuleContext(NegativoContext,0);
};

FeedbackContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TFGBasicosVisitor ) {
        return visitor.visitFeedback(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TFGBasicosParser.FeedbackContext = FeedbackContext;

TFGBasicosParser.prototype.feedback = function() {

    var localctx = new FeedbackContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, TFGBasicosParser.RULE_feedback);
    try {
        this.state = 38;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case TFGBasicosParser.GRACIAS:
        case TFGBasicosParser.GENIAL:
        case TFGBasicosParser.PERFECTO:
        case TFGBasicosParser.BIEN:
        case TFGBasicosParser.BUENA:
        case TFGBasicosParser.ME:
        case TFGBasicosParser.AHORA:
        case TFGBasicosParser.OLE:
        case TFGBasicosParser.ACABO:
        case TFGBasicosParser.ESTA:
        case TFGBasicosParser.ESA:
        case TFGBasicosParser.VERE:
        case TFGBasicosParser.NO:
        case TFGBasicosParser.MUY:
            this.enterOuterAlt(localctx, 1);
            this.state = 36;
            this.positivo();
            break;
        case TFGBasicosParser.NEGATIVO:
            this.enterOuterAlt(localctx, 2);
            this.state = 37;
            this.negativo();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PositivoContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGBasicosParser.RULE_positivo;
    return this;
}

PositivoContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PositivoContext.prototype.constructor = PositivoContext;

PositivoContext.prototype.GENIAL = function() {
    return this.getToken(TFGBasicosParser.GENIAL, 0);
};

PositivoContext.prototype.BIEN = function() {
    return this.getToken(TFGBasicosParser.BIEN, 0);
};

PositivoContext.prototype.GRACIAS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TFGBasicosParser.GRACIAS);
    } else {
        return this.getToken(TFGBasicosParser.GRACIAS, i);
    }
};


PositivoContext.prototype.ME = function() {
    return this.getToken(TFGBasicosParser.ME, 0);
};

PositivoContext.prototype.GUSTA = function() {
    return this.getToken(TFGBasicosParser.GUSTA, 0);
};

PositivoContext.prototype.BUENA = function() {
    return this.getToken(TFGBasicosParser.BUENA, 0);
};

PositivoContext.prototype.SELECCION = function() {
    return this.getToken(TFGBasicosParser.SELECCION, 0);
};

PositivoContext.prototype.AHORA = function() {
    return this.getToken(TFGBasicosParser.AHORA, 0);
};

PositivoContext.prototype.SI = function() {
    return this.getToken(TFGBasicosParser.SI, 0);
};

PositivoContext.prototype.OLE = function() {
    return this.getToken(TFGBasicosParser.OLE, 0);
};

PositivoContext.prototype.ESTA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TFGBasicosParser.ESTA);
    } else {
        return this.getToken(TFGBasicosParser.ESTA, i);
    }
};


PositivoContext.prototype.ERA = function() {
    return this.getToken(TFGBasicosParser.ERA, 0);
};

PositivoContext.prototype.PERFECTO = function() {
    return this.getToken(TFGBasicosParser.PERFECTO, 0);
};

PositivoContext.prototype.ACABO = function() {
    return this.getToken(TFGBasicosParser.ACABO, 0);
};

PositivoContext.prototype.VERLA = function() {
    return this.getToken(TFGBasicosParser.VERLA, 0);
};

PositivoContext.prototype.DE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TFGBasicosParser.DE);
    } else {
        return this.getToken(TFGBasicosParser.DE, i);
    }
};


PositivoContext.prototype.GUARDO = function() {
    return this.getToken(TFGBasicosParser.GUARDO, 0);
};

PositivoContext.prototype.PARA = function() {
    return this.getToken(TFGBasicosParser.PARA, 0);
};

PositivoContext.prototype.MAS = function() {
    return this.getToken(TFGBasicosParser.MAS, 0);
};

PositivoContext.prototype.TARDE = function() {
    return this.getToken(TFGBasicosParser.TARDE, 0);
};

PositivoContext.prototype.LA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TFGBasicosParser.LA);
    } else {
        return this.getToken(TFGBasicosParser.LA, i);
    }
};


PositivoContext.prototype.RECOMENDACION = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TFGBasicosParser.RECOMENDACION);
    } else {
        return this.getToken(TFGBasicosParser.RECOMENDACION, i);
    }
};


PositivoContext.prototype.ESA = function() {
    return this.getToken(TFGBasicosParser.ESA, 0);
};

PositivoContext.prototype.ADIOS = function() {
    return this.getToken(TFGBasicosParser.ADIOS, 0);
};

PositivoContext.prototype.VERE = function() {
    return this.getToken(TFGBasicosParser.VERE, 0);
};

PositivoContext.prototype.PERO = function() {
    return this.getToken(TFGBasicosParser.PERO, 0);
};

PositivoContext.prototype.NO = function() {
    return this.getToken(TFGBasicosParser.NO, 0);
};

PositivoContext.prototype.CONVENCES = function() {
    return this.getToken(TFGBasicosParser.CONVENCES, 0);
};

PositivoContext.prototype.NADA = function() {
    return this.getToken(TFGBasicosParser.NADA, 0);
};

PositivoContext.prototype.PARECE = function() {
    return this.getToken(TFGBasicosParser.PARECE, 0);
};

PositivoContext.prototype.MUY = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TFGBasicosParser.MUY);
    } else {
        return this.getToken(TFGBasicosParser.MUY, i);
    }
};


PositivoContext.prototype.MAL = function() {
    return this.getToken(TFGBasicosParser.MAL, 0);
};

PositivoContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TFGBasicosVisitor ) {
        return visitor.visitPositivo(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TFGBasicosParser.PositivoContext = PositivoContext;

TFGBasicosParser.prototype.positivo = function() {

    var localctx = new PositivoContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, TFGBasicosParser.RULE_positivo);
    var _la = 0; // Token type
    try {
        this.state = 125;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 40;
            this.match(TFGBasicosParser.GENIAL);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 41;
            this.match(TFGBasicosParser.BIEN);
            this.state = 42;
            this.match(TFGBasicosParser.GENIAL);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 43;
            this.match(TFGBasicosParser.GRACIAS);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 47;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TFGBasicosParser.GRACIAS) {
                this.state = 44;
                this.match(TFGBasicosParser.GRACIAS);
                this.state = 49;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 50;
            this.match(TFGBasicosParser.ME);
            this.state = 51;
            this.match(TFGBasicosParser.GUSTA);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 52;
            this.match(TFGBasicosParser.BUENA);
            this.state = 53;
            this.match(TFGBasicosParser.SELECCION);
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 54;
            this.match(TFGBasicosParser.AHORA);
            this.state = 55;
            this.match(TFGBasicosParser.SI);
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 56;
            this.match(TFGBasicosParser.OLE);
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 57;
            this.match(TFGBasicosParser.ESTA);
            this.state = 58;
            this.match(TFGBasicosParser.ERA);
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 59;
            this.match(TFGBasicosParser.PERFECTO);
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 60;
            this.match(TFGBasicosParser.ACABO);
            this.state = 64;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TFGBasicosParser.DE) {
                this.state = 61;
                this.match(TFGBasicosParser.DE);
                this.state = 66;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 67;
            this.match(TFGBasicosParser.VERLA);
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 68;
            this.match(TFGBasicosParser.PERFECTO);
            this.state = 69;
            this.match(TFGBasicosParser.ME);
            this.state = 73;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TFGBasicosParser.LA) {
                this.state = 70;
                this.match(TFGBasicosParser.LA);
                this.state = 75;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 76;
            this.match(TFGBasicosParser.GUARDO);
            this.state = 80;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TFGBasicosParser.LA) {
                this.state = 77;
                this.match(TFGBasicosParser.LA);
                this.state = 82;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 86;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TFGBasicosParser.RECOMENDACION) {
                this.state = 83;
                this.match(TFGBasicosParser.RECOMENDACION);
                this.state = 88;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 89;
            this.match(TFGBasicosParser.PARA);
            this.state = 90;
            this.match(TFGBasicosParser.MAS);
            this.state = 91;
            this.match(TFGBasicosParser.TARDE);
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 92;
            _la = this._input.LA(1);
            if(!(_la===TFGBasicosParser.ESTA || _la===TFGBasicosParser.ESA)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 93;
            this.match(TFGBasicosParser.ESTA);
            this.state = 94;
            this.match(TFGBasicosParser.BIEN);
            this.state = 95;
            _la = this._input.LA(1);
            if(!(_la===TFGBasicosParser.GRACIAS || _la===TFGBasicosParser.ADIOS)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 96;
            this.match(TFGBasicosParser.VERE);
            this.state = 97;
            _la = this._input.LA(1);
            if(!(_la===TFGBasicosParser.ESTA || _la===TFGBasicosParser.ESA)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 98;
            this.match(TFGBasicosParser.PERO);
            this.state = 99;
            this.match(TFGBasicosParser.NO);
            this.state = 100;
            this.match(TFGBasicosParser.ME);
            this.state = 101;
            this.match(TFGBasicosParser.CONVENCES);
            this.state = 102;
            this.match(TFGBasicosParser.NADA);
            break;

        case 14:
            this.enterOuterAlt(localctx, 14);
            this.state = 103;
            this.match(TFGBasicosParser.ME);
            this.state = 104;
            this.match(TFGBasicosParser.PARECE);
            this.state = 105;
            this.match(TFGBasicosParser.MUY);
            this.state = 106;
            this.match(TFGBasicosParser.BUENA);
            this.state = 107;
            this.match(TFGBasicosParser.RECOMENDACION);
            break;

        case 15:
            this.enterOuterAlt(localctx, 15);
            this.state = 108;
            this.match(TFGBasicosParser.NO);
            this.state = 109;
            this.match(TFGBasicosParser.ESTA);
            this.state = 110;
            this.match(TFGBasicosParser.MAL);
            break;

        case 16:
            this.enterOuterAlt(localctx, 16);
            this.state = 111;
            this.match(TFGBasicosParser.MUY);
            this.state = 112;
            this.match(TFGBasicosParser.BIEN);
            break;
